RESOLVED FIXED55537
Functions claim to have 'callee' which they actually don't (and shouldn't)
https://bugs.webkit.org/show_bug.cgi?id=55537
Summary Functions claim to have 'callee' which they actually don't (and shouldn't)
Mark S. Miller
Reported 2011-03-01 17:42:10 PST
> function foo(){"use strict"} > Object.getOwnPropertyNames(foo) ["arguments", "callee", "caller", "length", "name", "prototype"] > Object.getOwnPropertyDescriptor(foo, 'callee') undefined > 'callee' in foo false > foo.hasOwnProperty('callee') false I suspect this may be due to a partial misreading of the ES5/strict poisoning rules, where we poison "callee" and "caller" on arguments, but poison "arguments" and "caller" on strict functions.
Attachments
Gavin Barraclough
Comment 1 2011-06-07 18:55:22 PDT
Actually, this is a bug in all functions, not just strict ones. Looks like a copy/paste typo. Updating the bug name to reflect this.
Gavin Barraclough
Comment 2 2011-06-07 19:10:29 PDT
Fixed in r88315
Note You need to log in before you can comment on or make changes to this bug.