https://bugs.webkit.org/show_bug.cgi?id=55537 Functions claim to have 'callee' which they actually don't (and shouldn't)

Source/JavaScriptCore:

Reviewed by Sam Weinig

* JavaScriptCore.xcodeproj/project.pbxproj:
* runtime/JSFunction.cpp:
(JSC::JSFunction::getOwnPropertyNames):

LayoutTests:

Reviewed by Sam Weinig.

* fast/js/Object-getOwnPropertyNames-expected.txt:
* fast/js/script-tests/Object-getOwnPropertyNames.js:



Canonical link: https://commits.webkit.org/77737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88315 268f45cc-cd09-0410-ab3c-d52691b4dbfc